Adding WF and updating

--- a/GDL/spectra/3period/run_6483.ipynb
+++ b/GDL/spectra/3period/run_6483.ipynb
@@ -828,10 +828,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([669.78879157, 165.45546038,  35.47888571, 178.25437153,\n",
+       "       118.95247613,  50.65335828,  15.07822578,   2.92133025,\n",
+       "         1.2767361 ])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peserr"
+   ]
   },
   {
    "cell_type": "markdown",
