--- a/GDL/comparisons/6590_6600/Var_plots.ipynb
+++ b/GDL/comparisons/6590_6600/Var_plots.ipynb
@@ -91,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "Run: 6590\n",
-      "Number of triggers: 355779\n",
+      "Number of events: 355779\n",
       "Duration: 64783846\n",
       "Rate (Hz): 0.005491785714605459\n"
      ]
@@ -103,7 +103,7 @@
     "rate1 = N/T\n",
     "\n",
     "print(f'Run: {run1}')\n",
-    "print(f'Number of triggers:', N)\n",
+    "print(f'Number of events:', N)\n",
     "print(f'Duration:', T)\n",
     "print(f'Rate (Hz):', rate1)"
    ]
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "Run: 6600\n",
-      "Number of triggers: 142514\n",
+      "Number of events: 142514\n",
       "Duration: 27061509\n",
       "Rate (Hz): 0.005266299081843514\n"
      ]
@@ -130,7 +130,7 @@
     "rate2 = N/T\n",
     "\n",
     "print(f'Run: {run2}')\n",
-    "print(f'Number of triggers:', N)\n",
+    "print(f'Number of events:', N)\n",
     "print(f'Duration:', T)\n",
     "print(f'Rate (Hz):', rate2)"
    ]
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
