update for visualization

--- a/GDL/comparisons/6484_6803/SPeak_plots.ipynb
+++ b/GDL/comparisons/6484_6803/SPeak_plots.ipynb
@@ -1,6 +1,74 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ABOUT\n",
+    "\n",
+    "This NB is intended to compare the S1 and S1 variables between two different runs. All the events in the pmaps are analyzed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RUNS  INFORMATION\n",
+    "<table style=\"width:100%, text-align:left\">\n",
+    "    <tr>\n",
+    "        <th> Run Info </th>\n",
+    "        <th> Run 1: 6484 </th>\n",
+    "        <th> Run 2: 6803 </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue> DATE </font> </th>\n",
+    "        <td> Start date: 19-11-2018 15:12:18 <br>\n",
+    "             End   date: 20-11-2018 15:37:38 <br>\n",
+    "             Duration (sec): 87920 \n",
+    "        </td>\n",
+    "        <td> Start date: 18-01-2019 12:59:16  <br>\n",
+    "             End   date: 20-01-2019 17:35:35  <br>\n",
+    "             Duration (sec): 189379\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue> RUN TYPE </font> </td>\n",
+    "        <td> 21 - Kr + Th at lateral port (and Cs) </td> \n",
+    "        <td> 21 - Kr + Th at lateral port (and Cs) </td>  \n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue>TRIGGERS (Type 2)</font> </td>\n",
+    "        <td> OK: 681687 <br>\n",
+    "             LOST: 112746\n",
+    "        </td>\n",
+    "        <td> OK: 552780 <br>\n",
+    "             LOST: 667395 \n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue>DETECTOR CONDITIONS</font> </td>\n",
+    "        <td> Presure (bar):10.29 <br>\n",
+    "             Temperature (ºC):22.73\t<br>\n",
+    "             Cathode Voltage (volts):29999.90 <br>\n",
+    "             Gate Voltage (volts):7900.06 <br>\n",
+    "        </td>\n",
+    "        <td> Presure (bar): 10.14  <br>\n",
+    "             Temperature (ºC): 21.05\t<br>\n",
+    "             Cathode Voltage (volts):30000.70 <br>\n",
+    "             Gate Voltage (volts): 7499.80 <br>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Comments**: DAQ buffer, PMT pedestal and gains has changed between those runs. Sources positions were interchanged in between those runs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -640,62 +708,6 @@
     "         xlabel='S2 rms',\n",
     "         rg=(0, 1e4))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
