--- a/GDL/comparisons/6590_6600/SPeak_plots.ipynb
+++ b/GDL/comparisons/6590_6600/SPeak_plots.ipynb
@@ -1,6 +1,74 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ABOUT\n",
+    "\n",
+    "This NB is intended to compare the S1 and S1 variables between two different runs. All the events in the pmaps are analyzed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RUNS  INFORMATION\n",
+    "<table style=\"width:100%, text-align:left\">\n",
+    "    <tr>\n",
+    "        <th> Run Info </th>\n",
+    "        <th> Run 1: 6590 </th>\n",
+    "        <th> Run 2: 6600 </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue> DATE </font> </th>\n",
+    "        <td> Start date: 08-01-2019 19:09:46  <br>\n",
+    "             End   date: 09-01-2019 13:10:08  <br>\n",
+    "             Duration (sec): 64822\n",
+    "        </td>\n",
+    "        <td> Start date: 09-01-2019 17:20:20  <br>\n",
+    "             End   date: 11-01-2019 07:19:59  <br>\n",
+    "             Duration (sec): 136779\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue> RUN TYPE </font> </td>\n",
+    "        <td> 21 - Kr + Th at lateral port (and Cs) </td> \n",
+    "        <td> 21 - Kr + Th at lateral port (and Cs) </td>  \n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue>TRIGGERS (Type 2)</font> </td>\n",
+    "        <td> OK: 429250 <br>\n",
+    "             LOST: 29176\n",
+    "        </td>\n",
+    "        <td> OK: 870961  <br>\n",
+    "             LOST: 151847\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <th> <font color=blue>DETECTOR CONDITIONS</font> </td>\n",
+    "        <td> Presure (bar):10.11 <br>\n",
+    "             Temperature (ºC):20.65\t<br>\n",
+    "             Cathode Voltage (volts): 30001.20 <br>\n",
+    "             Gate Voltage (volts):7499.79 <br>\n",
+    "        </td>\n",
+    "        <td> Presure (bar): 10.12  <br>\n",
+    "             Temperature (ºC): 20.72\t<br>\n",
+    "             Cathode Voltage (volts):30001.00 <br>\n",
+    "             Gate Voltage (volts): 7499.77 <br>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Comments**: DAQ buffer has changed between those runs. PMT pedestals and gains are the same, signals enter in the saturation region of the dynamic range."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -634,62 +702,6 @@
     "         xlabel='S2 rms',\n",
     "         rg=(0, 1e4))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
