--- a/GDL/comparisons/6590_6600/Var_plots.ipynb
+++ b/GDL/comparisons/6590_6600/Var_plots.ipynb
@@ -21,7 +21,7 @@
     "        <th> Run 2: 6600 </th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue> DATE </font> </th>\n",
+    "        <th> DATE </th>\n",
     "        <td> Start date: 08-01-2019 19:09:46  <br>\n",
     "             End   date: 09-01-2019 13:10:08  <br>\n",
     "             Duration (sec): 64822\n",
@@ -32,12 +32,12 @@
     "        </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue> RUN TYPE </font> </td>\n",
+    "        <th> RUN TYPE </th>\n",
     "        <td> 21 - Kr + Th at lateral port (and Cs) </td> \n",
     "        <td> 21 - Kr + Th at lateral port (and Cs) </td>  \n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue>TRIGGERS (Type 2)</font> </td>\n",
+    "        <th> TRIGGERS (Type 2) </th>\n",
     "        <td> OK: 429250 <br>\n",
     "             LOST: 29176\n",
     "        </td>\n",
@@ -46,7 +46,7 @@
     "        </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue>DETECTOR CONDITIONS</font> </td>\n",
+    "        <th> DETECTOR CONDITIONS </th>\n",
     "        <td> Presure (bar):10.11 <br>\n",
     "             Temperature (ºC):20.65\t<br>\n",
     "             Cathode Voltage (volts): 30001.20 <br>\n",
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Comments**: DAQ buffer has changed between those runs. PMT pedestals and gains are the same, signals enter in the saturation region of the dynamic range."
+    "**Comments**: DAQ buffer has changed between these runs. PMT pedestals and gains are the same, signals enter in the saturation region of the dynamic range."
    ]
   },
   {
