--- a/GDL/comparisons/6484_6803/SPeak_plots.ipynb
+++ b/GDL/comparisons/6484_6803/SPeak_plots.ipynb
@@ -21,7 +21,7 @@
     "        <th> Run 2: 6803 </th>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue> DATE </font> </th>\n",
+    "        <th>  DATE </th>\n",
     "        <td> Start date: 19-11-2018 15:12:18 <br>\n",
     "             End   date: 20-11-2018 15:37:38 <br>\n",
     "             Duration (sec): 87920 \n",
@@ -32,12 +32,12 @@
     "        </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue> RUN TYPE </font> </td>\n",
+    "        <th> RUN TYPE  </th>\n",
     "        <td> 21 - Kr + Th at lateral port (and Cs) </td> \n",
     "        <td> 21 - Kr + Th at lateral port (and Cs) </td>  \n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue>TRIGGERS (Type 2)</font> </td>\n",
+    "        <th> TRIGGERS (Type 2) </th>\n",
     "        <td> OK: 681687 <br>\n",
     "             LOST: 112746\n",
     "        </td>\n",
@@ -46,7 +46,7 @@
     "        </td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <th> <font color=blue>DETECTOR CONDITIONS</font> </td>\n",
+    "        <th> DETECTOR CONDITIONS </th>\n",
     "        <td> Presure (bar):10.29 <br>\n",
     "             Temperature (ºC):22.73\t<br>\n",
     "             Cathode Voltage (volts):29999.90 <br>\n",
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Comments**: DAQ buffer, PMT pedestal and gains has changed between those runs. Sources positions were interchanged in between those runs."
+    "**Comments**: DAQ buffer, PMT pedestal and gains has changed between these runs. Sources positions were interchanged in between these runs."
    ]
   },
   {
