Upload pmap_summary scripts

--- a/GDL/irene_validation/Pmaps_PMTSignal_info_dev.ipynb
+++ b/GDL/irene_validation/Pmaps_PMTSignal_info_dev.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import time\n",
     "import numpy             as np\n",
     "import pandas            as pd\n",
     "import tables            as tb\n",
@@ -41,33 +42,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def loop_in_events(Spmap, SPMTpmap, EVENTS):\n",
     "    n, time, energy, height, width, rms, most_active_pmt, mact_percentage = [], [], [], [], [], [], [], []\n",
     "    events = []\n",
-    "    \n",
+    "\n",
     "    for ev in EVENTS:\n",
     "        S    = Spmap   [Spmap   [\"event\"]==ev]\n",
-    "        SPMT = SPMTpmap[SPMTpmap[\"event\"]==ev] \n",
-    "    \n",
+    "        SPMT = SPMTpmap[SPMTpmap[\"event\"]==ev]\n",
+    "\n",
     "        PEAKS = np.unique(S[\"peak\"])\n",
     "        if len(PEAKS)>0: n.append(np.max(PEAKS)+1)\n",
     "        else:            n.append(0)\n",
-    "    \n",
+    "\n",
     "        for pk in PEAKS:\n",
     "            #Total\n",
     "            times = S[S[\"peak\"]==pk][\"time\"].values\n",
     "            enes  = S[S[\"peak\"]==pk][\"ene\"] .values\n",
-    "            \n",
+    "\n",
     "            events.append(ev)\n",
     "            time  .append(times[np.argmax(enes)]/10**3)\n",
     "            height.append(np.max(enes))\n",
     "            energy.append(np.sum(enes))\n",
     "            width .append(times[-1]-times[0])\n",
-    "            \n",
+    "\n",
     "            PMTS  = np.unique(SPMT[\"npmt\"])\n",
     "            esum = []\n",
     "            for pmt in PMTS:\n",
@@ -75,48 +76,154 @@
     "                esum.append( np.sum(enes[enes>0]) )\n",
     "            most_active_pmt.append(PMTS[np.argmax(esum)])\n",
     "            mact_percentage.append( np.max(esum)/np.sum(esum)*100)\n",
-    "    return events, n, time, height, energy, width, most_active_pmt , mact_percentage   "
+    "    return events, n, time, height, energy, width, most_active_pmt , mact_percentage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pmapdir = icversion_datadir\n",
-    "npmaps = 2\n",
-    "outfilename = \"./summary_pmtsignal_icversion.h5\"\n",
+    "def Pmaps_PMTSignal_info(pmapdir, npmaps, outfilename):\n",
+    "    n_events_in_pmap = []\n",
     "\n",
-    "Pmaps_PMTSignal_info(pmapdir, npmaps, outfilename)"
+    "    nS1s, time_S1, height_S1, energy_S1, width_S1, rms_S1, most_active_pmt_S1 = [], [], [], [], [], [], []\n",
+    "    nS2s, time_S2, height_S2, energy_S2, width_S2, rms_S2, most_active_pmt_S2 = [], [], [], [], [], [], []\n",
+    "    mact_percentage_S1, mact_percentage_S2 = [], []\n",
+    "\n",
+    "    events_S1, events_S2 = [], []\n",
+    "    evts = []\n",
+    "    file_number = []\n",
+    "\n",
+    "    FILES = glob.glob(pmapdir + \"/*\")\n",
+    "    FILES.sort()\n",
+    "    FILES = FILES[:npmaps]\n",
+    "\n",
+    "    for pmap in FILES:\n",
+    "\n",
+    "        if pmap.split('_')[-3]==\"v0.9.9\":\n",
+    "            file_number.append(int(pmap.split('/')[-1].split('_')[1]))\n",
+    "        else:\n",
+    "            file_number.append(int(pmap.split('_')[-1][:4]))\n",
+    "\n",
+    "\n",
+    "        S1pmap, S2pmap, _, S1PMTpmap, S2PMTpmap = load_pmaps_as_df(pmap)\n",
+    "\n",
+    "        EVENTS = np.unique(S2pmap[\"event\"].values)\n",
+    "        evts.extend(EVENTS)\n",
+    "        n_events_in_pmap.append( len(EVENTS) )\n",
+    "\n",
+    "        ######### S1 DATA ###########\n",
+    "        events, n, time, height, energy, width, most_active_pmt, mact_per = loop_in_events(S1pmap, S1PMTpmap, EVENTS)\n",
+    "\n",
+    "        nS1s.extend(n)\n",
+    "        events_S1.extend(events)\n",
+    "        time_S1.extend(time)\n",
+    "        height_S1.extend(height)\n",
+    "        energy_S1.extend(energy)\n",
+    "        width_S1.extend(width)\n",
+    "        most_active_pmt_S1.extend(most_active_pmt)\n",
+    "        mact_percentage_S1.extend(mact_per)\n",
+    "\n",
+    "        ######### S2 DATA ############\n",
+    "        events, n, time, height, energy, width, most_active_pmt, mact_per = loop_in_events(S2pmap, S2PMTpmap, EVENTS)\n",
+    "\n",
+    "        nS2s.extend(n)\n",
+    "        events_S2.extend(events)\n",
+    "        time_S2.extend(time)\n",
+    "        height_S2.extend(height)\n",
+    "        energy_S2.extend(energy)\n",
+    "        width_S2.extend(width)\n",
+    "        most_active_pmt_S2.extend(most_active_pmt)\n",
+    "        mact_percentage_S2.extend(mact_per)\n",
+    "\n",
+    "\n",
+    "    S1_df = pd.DataFrame({\n",
+    "                'event':  events_S1,\n",
+    "                'time':   time_S1,\n",
+    "                'height': height_S1,\n",
+    "                'energy': energy_S1,\n",
+    "                'width':  width_S1,\n",
+    "                'mactPMT': most_active_pmt_S1,\n",
+    "                'mact_perc': mact_percentage_S1})\n",
+    "\n",
+    "\n",
+    "    S2_df = pd.DataFrame({\n",
+    "                'event':  events_S2,\n",
+    "                'time':   time_S2,\n",
+    "                'height': height_S2,\n",
+    "                'energy': energy_S2,\n",
+    "                'width':  width_S2,\n",
+    "                'mactPMT':most_active_pmt_S2,\n",
+    "                'mact_perc': mact_percentage_S2})\n",
+    "\n",
+    "    nS_by_event = pd.DataFrame({\n",
+    "                'event': evts ,\n",
+    "                'nS1s':   nS1s,\n",
+    "                'nS2s':   nS2s})\n",
+    "\n",
+    "    nevent_by_pmap = pd.DataFrame({\n",
+    "                'file': file_number ,\n",
+    "                'nevent':   n_events_in_pmap})\n",
+    "\n",
+    "\n",
+    "    S1_df         .to_hdf(outfilename, key='S1')\n",
+    "    S2_df         .to_hdf(outfilename, key='S2')\n",
+    "    nS_by_event   .to_hdf(outfilename, key='nS')\n",
+    "    nevent_by_pmap.to_hdf(outfilename, key='nevent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.263000775000023"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t0 = time.perf_counter()\n",
+    "pmapdir = icversion_datadir\n",
+    "npmaps = 10\n",
+    "outfilename = \"/Users/gonzalo/Documents/NEXT/ireneProblem/DATA/summary_pmtsignal_icversion.h5\"\n",
+    "\n",
+    "Pmaps_PMTSignal_info(pmapdir, npmaps, outfilename)\n",
+    "time.perf_counter() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,32 +255,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -182,14 +289,14 @@
       ],
       "text/plain": [
        "   event  nS1s  nS2s\n",
-       "0      1     4     1\n",
-       "1      2     4     1\n",
-       "2      3     1     1\n",
-       "3      4     3     1\n",
-       "4      5     7     1"
+       "0      7     4     1\n",
+       "1     13     3     1\n",
+       "2     15     2     1\n",
+       "3     17    14     1\n",
+       "4     23    18     1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,68 +343,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>113.100</td>\n",
-       "      <td>0.607815</td>\n",
-       "      <td>1.287501</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.567706</td>\n",
+       "      <td>7</td>\n",
+       "      <td>277.200</td>\n",
+       "      <td>0.745038</td>\n",
+       "      <td>0.919726</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.460323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>236.625</td>\n",
-       "      <td>0.820713</td>\n",
-       "      <td>0.942436</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.567706</td>\n",
+       "      <td>7</td>\n",
+       "      <td>306.325</td>\n",
+       "      <td>14.684610</td>\n",
+       "      <td>80.435486</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.460323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>295.800</td>\n",
-       "      <td>2.510230</td>\n",
-       "      <td>13.820708</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.567706</td>\n",
+       "      <td>7</td>\n",
+       "      <td>410.225</td>\n",
+       "      <td>1.108001</td>\n",
+       "      <td>2.015945</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.460323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>312.700</td>\n",
-       "      <td>0.719642</td>\n",
-       "      <td>0.040256</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.567706</td>\n",
+       "      <td>7</td>\n",
+       "      <td>743.200</td>\n",
+       "      <td>0.751289</td>\n",
+       "      <td>1.516431</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15.460323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>8.350</td>\n",
-       "      <td>0.826929</td>\n",
-       "      <td>2.181855</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>15.567245</td>\n",
+       "      <td>13</td>\n",
+       "      <td>340.500</td>\n",
+       "      <td>0.601194</td>\n",
+       "      <td>0.701673</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.272127</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   event     time    height     energy  width  mactPMT  mact_perc\n",
-       "0      1  113.100  0.607815   1.287501  200.0        1  14.567706\n",
-       "1      1  236.625  0.820713   0.942436  200.0        1  14.567706\n",
-       "2      1  295.800  2.510230  13.820708  275.0        1  14.567706\n",
-       "3      1  312.700  0.719642   0.040256  200.0        1  14.567706\n",
-       "4      2    8.350  0.826929   2.181855  175.0        4  15.567245"
+       "   event     time     height     energy  width  mactPMT  mact_perc\n",
+       "0      7  277.200   0.745038   0.919726  150.0        5  15.460323\n",
+       "1      7  306.325  14.684610  80.435486  300.0        5  15.460323\n",
+       "2      7  410.225   1.108001   2.015945  325.0        5  15.460323\n",
+       "3      7  743.200   0.751289   1.516431  225.0        5  15.460323\n",
+       "4     13  340.500   0.601194   0.701673  200.0        0  10.272127"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,75 +451,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>806.496437</td>\n",
+       "      <td>8007.359863</td>\n",
+       "      <td>58357.921875</td>\n",
+       "      <td>21756.9375</td>\n",
        "      <td>1</td>\n",
-       "      <td>804.475812</td>\n",
-       "      <td>1649.783813</td>\n",
-       "      <td>10208.359375</td>\n",
-       "      <td>12425.3125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11.765875</td>\n",
+       "      <td>11.740284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>802.483062</td>\n",
-       "      <td>1026.768799</td>\n",
-       "      <td>4947.874512</td>\n",
-       "      <td>9486.1250</td>\n",
+       "      <td>13</td>\n",
+       "      <td>805.483313</td>\n",
+       "      <td>10046.357422</td>\n",
+       "      <td>199127.890625</td>\n",
+       "      <td>67425.1250</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.263434</td>\n",
+       "      <td>11.733124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>802.501875</td>\n",
-       "      <td>1831.519165</td>\n",
-       "      <td>8676.576172</td>\n",
-       "      <td>9712.4375</td>\n",
+       "      <td>15</td>\n",
+       "      <td>805.474938</td>\n",
+       "      <td>10167.400391</td>\n",
+       "      <td>56339.335938</td>\n",
+       "      <td>14556.6875</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.913650</td>\n",
+       "      <td>11.586146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>802.481188</td>\n",
-       "      <td>2843.324951</td>\n",
-       "      <td>8872.907227</td>\n",
-       "      <td>7736.3125</td>\n",
+       "      <td>17</td>\n",
+       "      <td>805.485812</td>\n",
+       "      <td>11752.015625</td>\n",
+       "      <td>101576.281250</td>\n",
+       "      <td>15666.8125</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.610174</td>\n",
+       "      <td>11.678343</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>803.504625</td>\n",
-       "      <td>2900.474121</td>\n",
-       "      <td>12070.620117</td>\n",
-       "      <td>10457.5625</td>\n",
+       "      <td>23</td>\n",
+       "      <td>803.511125</td>\n",
+       "      <td>11541.181641</td>\n",
+       "      <td>50092.656250</td>\n",
+       "      <td>10787.6250</td>\n",
        "      <td>1</td>\n",
-       "      <td>11.546741</td>\n",
+       "      <td>11.410416</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   event        time       height        energy       width  mactPMT  \\\n",
-       "0      1  804.475812  1649.783813  10208.359375  12425.3125        1   \n",
-       "1      2  802.483062  1026.768799   4947.874512   9486.1250        1   \n",
-       "2      3  802.501875  1831.519165   8676.576172   9712.4375        1   \n",
-       "3      4  802.481188  2843.324951   8872.907227   7736.3125        1   \n",
-       "4      5  803.504625  2900.474121  12070.620117  10457.5625        1   \n",
+       "   event        time        height         energy       width  mactPMT  \\\n",
+       "0      7  806.496437   8007.359863   58357.921875  21756.9375        1   \n",
+       "1     13  805.483313  10046.357422  199127.890625  67425.1250        1   \n",
+       "2     15  805.474938  10167.400391   56339.335938  14556.6875        1   \n",
+       "3     17  805.485812  11752.015625  101576.281250  15666.8125        1   \n",
+       "4     23  803.511125  11541.181641   50092.656250  10787.6250        1   \n",
        "\n",
        "   mact_perc  \n",
-       "0  11.765875  \n",
-       "1  11.263434  \n",
-       "2  11.913650  \n",
-       "3  11.610174  \n",
-       "4  11.546741  "
+       "0  11.740284  \n",
+       "1  11.733124  \n",
+       "2  11.586146  \n",
+       "3  11.678343  \n",
+       "4  11.410416  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,12 +562,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>272</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>265</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -468,11 +575,11 @@
       ],
       "text/plain": [
        "   file  nevent\n",
-       "0     0     272\n",
-       "1     1     265"
+       "0     0      38\n",
+       "1     1      43"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,6 +587,41 @@
    "source": [
     "pd.read_hdf(outfilename, key=\"nevent\").head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
